fix issue on mobile with iOS

--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -13,3 +13,9 @@
   line-height: 1.5;
   margin-bottom: 30px;
 }
+
+@media (max-width: 702px) {
+  .AboutMe {
+    padding: 0 50px;
+  }
+}
