--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -13,3 +13,9 @@
   line-height: 1.5;
   margin-bottom: 30px;
 }
+
+@media (max-width: 702px) {
+  .Experience {
+    padding: 0 50px;
+  }
+}
