--- a/src/components/Introduction/Introduction.module.css
+++ b/src/components/Introduction/Introduction.module.css
@@ -18,5 +18,6 @@
 @media (max-width: 702px) {
   .Introduction {
     margin-bottom: 200px;
+    padding: 0 50px;
   }
 }
