--- a/src/components/UI/MasterDetail/MasterDetail.module.css
+++ b/src/components/UI/MasterDetail/MasterDetail.module.css
@@ -31,7 +31,7 @@
     overflow-x: auto;
   }
   .SelectList {
-    width: 600px;
+    width: 750px;
     height: 100%;
     margin-block-start: 20px;
     margin-bottom: 40px;
